Bug 1120650: add telemetry probe for slow script notices. r=vladan, r=billm